# AverageGrade_Calc

./: CMakeLists.txt
include/: averageGrade_f.h
src/: averageGrade_f.cpp  main.cpp
